// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationBar > Renders "Not logged in" correctly 1`] = `
<React.Fragment>
  <Blueprint6.Navbar
    className="NavigationBar primary-navbar _primary-navbar_d292d6 bp6-dark"
  >
    <Blueprint6.NavbarGroup
      align="left"
    >
      <Blueprint6.Popover
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint6.Navbar>
            <Blueprint6.NavbarGroup />
          </Blueprint6.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link"
          to="/welcome"
        >
          <Blueprint6.NavbarHeading>
            <Blueprint6.Button
              active={true}
              className="app-title"
              icon="symbol-diamond"
              minimal={true}
            >
              Source Academy @ NUS
            </Blueprint6.Button>
          </Blueprint6.NavbarHeading>
        </NavLink>
      </Blueprint6.Popover>
      <DesktopNavLink
        disabled={true}
        icon="music"
        text="Sourcecast"
        to="/courses/undefined/sourcecast"
      />
      <DesktopNavLink
        disabled={true}
        icon="code"
        text="Playground"
        to="/playground"
      />
      <DesktopNavLink
        disabled={true}
        icon="book"
        text="SICP JS"
        to="/sicpjs"
      />
      <DesktopNavLink
        disabled={true}
        icon="mountain"
        text="Achievements"
        to="/courses/undefined/achievements"
      />
      <DesktopNavLink
        disabled={true}
        icon="git-repo"
        text="Stories"
        to="/courses/undefined/stories"
      />
      <DesktopNavLink
        disabled={true}
        icon="timeline-bar-chart"
        text="Leaderboard"
        to="/courses/undefined/leaderboard"
      />
    </Blueprint6.NavbarGroup>
    <Blueprint6.NavbarGroup
      align="right"
    >
      <NavigationBarLangSelectButton />
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint6.Icon
          icon="heart"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint6.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint6.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint6.NavbarGroup>
  </Blueprint6.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={null}
      path="/courses/:courseId/leaderboard/*"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={null}
      path="*"
    />
  </Routes>
</React.Fragment>
`;

exports[`NavigationBar > Renders correctly for student with course 1`] = `
<React.Fragment>
  <Blueprint6.Navbar
    className="NavigationBar primary-navbar _primary-navbar_d292d6 bp6-dark"
  >
    <Blueprint6.NavbarGroup
      align="left"
    >
      <Blueprint6.Popover
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint6.Navbar>
            <Blueprint6.NavbarGroup>
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  [
                    "xs",
                    "sm",
                  ]
                }
                icon="flame"
                text="Missions"
                to="/courses/1/missions"
              />
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  [
                    "xs",
                    "sm",
                  ]
                }
                icon="lightbulb"
                text="Quests"
                to="/courses/1/quests"
              />
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  [
                    "xs",
                    "sm",
                  ]
                }
                icon="predictive-analysis"
                text="Paths"
                to="/courses/1/paths"
              />
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  [
                    "xs",
                    "sm",
                  ]
                }
                icon="comparison"
                text="Contests"
                to="/courses/1/contests"
              />
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  [
                    "xs",
                    "sm",
                  ]
                }
                icon="manual"
                text="Missions"
                to="/courses/1/missions"
              />
            </Blueprint6.NavbarGroup>
          </Blueprint6.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link"
          to="/courses/1"
        >
          <Blueprint6.NavbarHeading>
            <Blueprint6.Button
              active={true}
              className="app-title"
              icon="symbol-diamond"
              minimal={true}
            >
              CS1101S
            </Blueprint6.Button>
          </Blueprint6.NavbarHeading>
        </NavLink>
      </Blueprint6.Popover>
      <DesktopNavLink
        disabled={false}
        icon="music"
        text="Sourcecast"
        to="/courses/1/sourcecast"
      />
      <DesktopNavLink
        disabled={false}
        icon="code"
        text="Playground"
        to="/playground"
      />
      <DesktopNavLink
        disabled={false}
        icon="book"
        text="SICP JS"
        to="/sicpjs"
      />
      <DesktopNavLink
        disabled={false}
        icon="mountain"
        text="Achievements"
        to="/courses/1/achievements"
      />
      <DesktopNavLink
        disabled={true}
        icon="git-repo"
        text="Stories"
        to="/courses/1/stories"
      />
      <DesktopNavLink
        disabled={true}
        icon="timeline-bar-chart"
        text="Leaderboard"
        to="/courses/1/leaderboard"
      />
    </Blueprint6.NavbarGroup>
    <Blueprint6.NavbarGroup
      align="right"
    >
      <NavigationBarLangSelectButton />
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint6.Icon
          icon="heart"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint6.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint6.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint6.NavbarGroup>
  </Blueprint6.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={null}
      path="/courses/:courseId/leaderboard/*"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={
        <AcademyNavigationBar
          assessmentTypes={
            [
              "Missions",
              "Quests",
              "Paths",
              "Contests",
              "Missions",
            ]
          }
        />
      }
      path="*"
    />
  </Routes>
</React.Fragment>
`;

exports[`NavigationBar > Renders correctly for student without course 1`] = `
<React.Fragment>
  <Blueprint6.Navbar
    className="NavigationBar primary-navbar _primary-navbar_d292d6 bp6-dark"
  >
    <Blueprint6.NavbarGroup
      align="left"
    >
      <Blueprint6.Popover
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint6.Navbar>
            <Blueprint6.NavbarGroup />
          </Blueprint6.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link"
          to="/welcome"
        >
          <Blueprint6.NavbarHeading>
            <Blueprint6.Button
              active={true}
              className="app-title"
              icon="symbol-diamond"
              minimal={true}
            >
              Source Academy @ NUS
            </Blueprint6.Button>
          </Blueprint6.NavbarHeading>
        </NavLink>
      </Blueprint6.Popover>
      <DesktopNavLink
        disabled={true}
        icon="music"
        text="Sourcecast"
        to="/courses/undefined/sourcecast"
      />
      <DesktopNavLink
        disabled={true}
        icon="code"
        text="Playground"
        to="/playground"
      />
      <DesktopNavLink
        disabled={false}
        icon="book"
        text="SICP JS"
        to="/sicpjs"
      />
      <DesktopNavLink
        disabled={true}
        icon="mountain"
        text="Achievements"
        to="/courses/undefined/achievements"
      />
      <DesktopNavLink
        disabled={true}
        icon="git-repo"
        text="Stories"
        to="/courses/undefined/stories"
      />
      <DesktopNavLink
        disabled={true}
        icon="timeline-bar-chart"
        text="Leaderboard"
        to="/courses/undefined/leaderboard"
      />
    </Blueprint6.NavbarGroup>
    <Blueprint6.NavbarGroup
      align="right"
    >
      <NavigationBarLangSelectButton />
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint6.Icon
          icon="heart"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint6.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint6.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint6.NavbarGroup>
  </Blueprint6.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={null}
      path="/courses/:courseId/leaderboard/*"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={null}
      path="*"
    />
  </Routes>
</React.Fragment>
`;
